--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div id="landing-text-inner">
                     <h1>PHOTOGRAPHY</h1>
                     <h2>
-                        BEAUTIFUL NATURAL PHOTOGRAPGY
+                        Digital Photographs
                     </h2>
                     <a href="#images" class="btn" id="view-work">
                     view-work
